🖼️ 画像とリンクの絶対パスを相対パスに修正 - 全ページで画像表示とナビゲーション正常化

--- a/src/posts/001.md
+++ b/src/posts/001.md
@@ -9,7 +9,7 @@ permalink: /posts/001/
 
 # 初投稿
 
-<img class="img-s" src="/assets/fish_fugu_haku.png" alt="河豚" width="200">
+<img class="img-s" src="{{ '../assets/fish_fugu_haku.png' | relativePath }}" alt="河豚" width="200">
 
 
 
