🔧 GitHub表示用にMarkdown画像パスを修正

--- a/src/posts/002.md
+++ b/src/posts/002.md
@@ -10,9 +10,7 @@ thumbnail: assets/images/images.jpg
 # 江の島旅行 準備編
 
 
-<div>
-  <img src="{{ 'assets/images/enosima.jpg' | relativePath }}" alt="スマホ" width="350">
-</div>
+![江の島](../assets/images/enosima.jpg)
 <br>
 
 ---
@@ -30,9 +28,7 @@ thumbnail: assets/images/images.jpg
 
 
 ## スマホ (xiaomi 15 ultra)
-<div>
-  <img src="{{ 'assets/images/sumaho.jpg' | relativePath }}" alt="スマホ" width="350">
-</div>
+![スマホ](../assets/images/sumaho.jpg)
 
 カメラ付きスマホ<br>
 SoCがSnapdragon 8 Eliteだから困ることなし。<br>
@@ -42,9 +38,7 @@ FeliCa(おサイフケータイ)が非搭載なのでそれだけが不満。て
 ---
 
 ## 腕時計 (GARMIN vivoactive 5)
-<div>
-  <img src="{{ 'assets/images/sumawatch.jpg' | relativePath }}" alt="腕時計" width="150">
-</div>
+![腕時計](../assets/images/sumawatch.jpg)
 
 ずっと使ってるやつ<br>
 歩数、消費カロリー、移動距離、気温、天気が一画面で全部見れる。<br>
