🔧 GitHub表示用に画像パスを絶対URLに変更

--- a/src/posts/002.md
+++ b/src/posts/002.md
@@ -10,7 +10,7 @@ thumbnail: assets/images/images.jpg
 # 江の島旅行 準備編
 
 
-![江の島](../assets/images/enosima.jpg)
+![江の島](https://github.com/Yomi12223/ydm-blog/raw/main/src/assets/images/enosima.jpg)
 <br>
 
 ---
@@ -28,7 +28,7 @@ thumbnail: assets/images/images.jpg
 
 
 ## スマホ (xiaomi 15 ultra)
-![スマホ](../assets/images/sumaho.jpg)
+![スマホ](https://github.com/Yomi12223/ydm-blog/raw/main/src/assets/images/sumaho.jpg)
 
 カメラ付きスマホ<br>
 SoCがSnapdragon 8 Eliteだから困ることなし。<br>
@@ -38,7 +38,7 @@ FeliCa(おサイフケータイ)が非搭載なのでそれだけが不満。て
 ---
 
 ## 腕時計 (GARMIN vivoactive 5)
-![腕時計](../assets/images/sumawatch.jpg)
+![腕時計](https://github.com/Yomi12223/ydm-blog/raw/main/src/assets/images/sumawatch.jpg)
 
 ずっと使ってるやつ<br>
 歩数、消費カロリー、移動距離、気温、天気が一画面で全部見れる。<br>
