🎨 画像サイズ調整完了 - 記事の画像を適切なサイズに修正

--- a/src/posts/002.md
+++ b/src/posts/002.md
@@ -10,7 +10,7 @@ thumbnail: assets/images/images.jpg
 # 江の島旅行 準備編
 
 
-![江の島](https://github.com/Yomi12223/ydm-blog/raw/main/src/assets/images/enosima.jpg)
+<img src="https://github.com/Yomi12223/ydm-blog/raw/main/src/assets/images/enosima.jpg" alt="江の島" width="350">
 <br>
 
 ---
@@ -28,7 +28,7 @@ thumbnail: assets/images/images.jpg
 
 
 ## スマホ (xiaomi 15 ultra)
-![スマホ](https://github.com/Yomi12223/ydm-blog/raw/main/src/assets/images/sumaho.jpg)
+<img src="https://github.com/Yomi12223/ydm-blog/raw/main/src/assets/images/sumaho.jpg" alt="スマホ" width="350">
 
 カメラ付きスマホ<br>
 SoCがSnapdragon 8 Eliteだから困ることなし。<br>
