🔧 画像タグ形式修正 - Nunjucksテンプレート形式に統一でスタイル適用

--- a/src/posts/002.md
+++ b/src/posts/002.md
@@ -10,7 +10,7 @@ thumbnail: assets/images/images.jpg
 # 江の島旅行 準備編
 
 
-<img src="https://github.com/Yomi12223/ydm-blog/raw/main/src/assets/images/enosima.jpg" alt="江の島" width="350">
+<img class="img-s" src="{{ 'assets/images/enosima.jpg' | relativePath }}" alt="江の島" width="250">
 <br>
 
 ---
@@ -28,7 +28,7 @@ thumbnail: assets/images/images.jpg
 
 
 ## スマホ (xiaomi 15 ultra)
-<img src="https://github.com/Yomi12223/ydm-blog/raw/main/src/assets/images/sumaho.jpg" alt="スマホ" width="350">
+<img class="img-s" src="{{ 'assets/images/sumaho.jpg' | relativePath }}" alt="スマホ" width="200">
 
 カメラ付きスマホ<br>
 SoCがSnapdragon 8 Eliteだから困ることなし。<br>
@@ -38,7 +38,7 @@ FeliCa(おサイフケータイ)が非搭載なのでそれだけが不満。て
 ---
 
 ## 腕時計 (GARMIN vivoactive 5)
-![腕時計](https://github.com/Yomi12223/ydm-blog/raw/main/src/assets/images/sumawatch.jpg)
+<img class="img-s" src="{{ 'assets/images/sumawatch.jpg' | relativePath }}" alt="腕時計" width="150">
 
 ずっと使ってるやつ<br>
 歩数、消費カロリー、移動距離、気温、天気が一画面で全部見れる。<br>
