🎨 画像サイズ制御修正 - CSSクラスとインラインスタイルで適切なサイズ調整

--- a/src/posts/002.md
+++ b/src/posts/002.md
@@ -10,7 +10,7 @@ thumbnail: assets/images/images.jpg
 # 江の島旅行 準備編
 
 
-<img class="img-s" src="{{ 'assets/images/enosima.jpg' | relativePath }}" alt="江の島" width="250">
+<img class="img-m" src="{{ 'assets/images/enosima.jpg' | relativePath }}" alt="江の島" width="250">
 <br>
 
 ---
@@ -38,7 +38,7 @@ FeliCa(おサイフケータイ)が非搭載なのでそれだけが不満。て
 ---
 
 ## 腕時計 (GARMIN vivoactive 5)
-<img class="img-s" src="{{ 'assets/images/sumawatch.jpg' | relativePath }}" alt="腕時計" width="150">
+<img class="img-s" src="{{ 'assets/images/sumawatch.jpg' | relativePath }}" alt="腕時計" style="max-width: 150px;">
 
 ずっと使ってるやつ<br>
 歩数、消費カロリー、移動距離、気温、天気が一画面で全部見れる。<br>
