🖼️ 江の島画像をimg-lクラスに変更 - より大きなサイズで表示

--- a/src/posts/002.md
+++ b/src/posts/002.md
@@ -10,7 +10,7 @@ thumbnail: assets/images/images.jpg
 # 江の島旅行 準備編
 
 
-<img class="img-m" src="{{ 'assets/images/enosima.jpg' | relativePath }}" alt="江の島" width="250">
+<img class="img-l" src="{{ 'assets/images/enosima.jpg' | relativePath }}" alt="江の島" width="250">
 <br>
 
 ---
